# ibis-widget

./: README.md  pyproject.toml
examples/: intro.ipynb
src/ibis_widget/: __init__.py  _widget.py  datagrid.js  widget.js
src/ibis_widget/tests/: test_widget.py
